--- a/test/cases/operators.equality.css
+++ b/test/cases/operators.equality.css
@@ -1,12 +1,12 @@
 body {
   foo: true;
   foo: true;
-  foo: false;
   foo: true;
   foo: true;
   foo: true;
   foo: true;
   foo: true;
-  foo: false;
+  foo: true;
+  foo: true;
   foo: true;
 }
