--- a/test/cases/operators.equality.styl
+++ b/test/cases/operators.equality.styl
@@ -1,31 +1,22 @@
 body
   
-  // true
   foo 1 != 5
   
-  // true
   foo wahoo == wahoo
   
-  // false
-  foo wahoo == something
+  foo wahoo == something == false
   
-  // true
   foo wahoo != something
   foo wahoo is not something
 
-  // true
   foo = yay
   foo yes == (foo is defined ? yes : nope)
   
-  // true
   rawr = 'asdfasdf'
   foo yes == (rawr is defined ? yes : nope)
   
-  // true
   foo 1000ms == 1s
   
-  // false
-  foo 1ms == 1s
-  
-  // true
+  foo 1ms == 1s == false
+
   foo 5 < 10 and 10 > 5
