Fixed != result when coercion fails

--- a/test/cases/operators.equality.css
+++ b/test/cases/operators.equality.css
@@ -7,6 +7,22 @@ body {
   foo: true;
   foo: true;
   foo: true;
+}
+body {
+  foo: true;
+  foo: true;
+  foo: true;
+}
+body {
+  foo: true;
+  foo: true;
+  foo: true;
+}
+body {
+  foo: true;
+  foo: true;
+}
+body {
   foo: true;
   foo: true;
 }
