--- a/examples/arithmetic.styl
+++ b/examples/arithmetic.styl
@@ -15,7 +15,7 @@ h1
   color primary-color + #030303
 
 h2
-  color primary-color - rgba(0,0,0,0.5)
+  color primary-color + 20%
 
 #wrapper
   width width
