small / obvious improvment to clampDegrees()
duh

--- a/test/cases/arithmetic.color.css
+++ b/test/cases/arithmetic.color.css
@@ -19,12 +19,12 @@ body {
   foo: #c46f44;
 }
 body {
-  foo: #c4446f;
-  foo: #c4446f;
+  foo: #c46f44;
+  foo: #c46f44;
 }
 body {
   foo: #c476a8;
-  foo: #c476a8;
+  foo: #c4a876;
 }
 body {
   foo: #c476a8;
@@ -35,6 +35,6 @@ body {
   foo: #ed834e;
 }
 body {
-  foo: #825363;
-  foo: #825363;
+  foo: #826353;
+  foo: #826353;
 }
