--- a/test/cases/mixins.reset.styl
+++ b/test/cases/mixins.reset.styl
@@ -17,3 +17,11 @@ reset()
     background transparent
 
 reset()
+
+complex()
+  li:nth-child(2), foo > bar,
+  :last-child
+    display: none
+
+ul
+  complex()
