--- a/test/cases/css.selector.interpolation.styl
+++ b/test/cases/css.selector.interpolation.styl
@@ -76,3 +76,15 @@ cols = 1 2 3
 for col in cols
   .col-{col} { foo: 'bar'; }
 
+
+@media print {
+  blockquote { border: 1px solid #999 }
+  blockquote {
+   border: 1px solid #999
+  }
+  block{'quote'} { border: 1px solid #999 }
+  block{'quote'} {
+   border: 1px solid #999
+  }
+}
+
