fixed support for selectors like "body{color:red}" etc

--- a/test/cases/css.whitespace.css
+++ b/test/cases/css.whitespace.css
@@ -29,9 +29,9 @@ ul li {
 body {
   padding: 5px;
 }
-body {
-  padding: 5px;
+foo bar {
+  color: "asdf";
 }
-input {
-  foo: "bar";
+foo bar {
+  color: "asdf";
 }
