Fixed @keyframe block evaluation. Closes #252

--- a/test/cases/css.keyframes.css
+++ b/test/cases/css.keyframes.css
@@ -39,10 +39,10 @@
 }
 @-webkit-keyframes something {
   0% {
-    color: red;
+    color: #f00;
   }
 
   100% {
-    color: blue;
+    color: #00f;
   }
 }
