--- a/assets/index.jade
+++ b/assets/index.jade
@@ -44,7 +44,7 @@ html
       #content
         .example
           h2 CSS needs a hero
-          pre
+          pre.
             body {
               font: 12px Helvetica, Arial, sans-serif;
             }
@@ -55,7 +55,7 @@ html
             }
         .example
           h2 What if we could omit braces?
-          pre
+          pre.
             body
               font: 12px Helvetica, Arial, sans-serif;
             
@@ -65,7 +65,7 @@ html
               border-radius: 5px;
         .example
           h2 How about semi-colons?
-          pre
+          pre.
             body
               font: 12px Helvetica, Arial, sans-serif
             
@@ -75,7 +75,7 @@ html
               border-radius: 5px
         .example
           h2 Why stop there, drop the colons
-          pre
+          pre.
             body
               font 12px Helvetica, Arial, sans-serif
             
@@ -85,7 +85,7 @@ html
               border-radius 5px
         .example
           h2 Keep things DRY
-          pre
+          pre.
             border-radius()
               -webkit-border-radius arguments
               -moz-border-radius arguments
@@ -98,7 +98,7 @@ html
               border-radius(5px)
         .example
           h2 How about transparent mixins?
-          pre
+          pre.
             border-radius()
               -webkit-border-radius arguments
               -moz-border-radius arguments
@@ -111,7 +111,7 @@ html
               border-radius 5px
         .example
           h2 Create &amp; Share
-          pre
+          pre.
             @import 'vendor'
             
             body
@@ -121,7 +121,7 @@ html
               border-radius 5px
         .example
           h2 Even in-language functions!
-          pre  
+          pre.
             sum(nums...)
               sum = 0
               sum += n for n in nums
@@ -130,7 +130,7 @@ html
             // => 10
         .example
           h2 What if it were all optional?
-          pre
+          pre.
             fonts = helvetica, arial, sans-serif
             
             body {
@@ -143,7 +143,7 @@ html
           p
             | If you want an expressive css language for nodejs with these
             | features or the features listed below, head over to
-            a(href='http://github.com/learnboost/stylus') GitHub
+            a(href='http://github.com/learnboost/stylus') GitHub 
             | for more information.
           .features
             h3 Features
