Added support and examples for SVG data URI

--- a/examples/images.styl
+++ b/examples/images.styl
@@ -5,6 +5,9 @@ body
 #wrapper
   background url(/images/gopher.jpg)
 
+#footer
+  background url(/images/gradient.svg)
+
 .sprite
   // both work due to the additional paths option
   // passed to stylus.url()
