--- a/lib/functions/index.styl
+++ b/lib/functions/index.styl
@@ -43,6 +43,8 @@ abs(n) { math(n, 'abs') }
 ceil(n) { math(n, 'ceil') }
 floor(n) { math(n, 'floor') }
 round(n) { math(n, 'round') }
+sin(n) { math(n, 'sin') }
+cos(n) { math(n, 'cos') }
 min(a, b) { a < b ? a : b }
 max(a, b) { a > b ? a : b }
 
