Added `PI` and `-math-prop(name)`

--- a/lib/functions/index.styl
+++ b/lib/functions/index.styl
@@ -47,6 +47,7 @@ sin(n) { math(n, 'sin') }
 cos(n) { math(n, 'cos') }
 min(a, b) { a < b ? a : b }
 max(a, b) { a > b ? a : b }
+PI = -math-prop('PI')
 
 // return the sum of the given numbers
 
