fixed tests due to previous merge

--- a/test/cases/bifs.lighten.css
+++ b/test/cases/bifs.lighten.css
@@ -3,12 +3,12 @@ body {
   foo: #fff;
 }
 body {
-  foo: #000;
-  foo: #000;
+  foo: #808080;
+  foo: #c0c0c0;
 }
 body {
   foo: #ababab;
   foo: #dfdfdf;
-  foo: #505050;
-  foo: #4f4f4f;
+  foo: #ababab;
+  foo: #d5d5d5;
 }
