added tests for the ability to preserve comments

--- a/test/cases/comments.css
+++ b/test/cases/comments.css
@@ -9,3 +9,9 @@ x:-moz-any-link,
 x:default select {
   font-weight: bold !important;
 }
+/*! preserved comment */
+/*!
+ * preserved 
+ * multiline 
+ * comment
+ */
