--- a/test/cases/comments.styl
+++ b/test/cases/comments.styl
@@ -26,3 +26,11 @@ html>/**/body select
 x:-moz-any-link
 x:default select
   font-weight bold !important
+
+/*! preserved comment */
+
+/*!
+ * preserved 
+ * multiline 
+ * comment
+ */
