--- a/test/cases/if.selectors.styl
+++ b/test/cases/if.selectors.styl
@@ -7,6 +7,16 @@ if true
   form
     input
       border 1px solid #eee
+
+  [type='text']
+    margin 0
+
+  input[type='text']
+    display none
+
+  input[type='password'], select
+    background #eee
+
   if true
     body
       font 12px
