Changed comment output. css-style multi-line comments are preserved

--- a/test/cases/comments.css
+++ b/test/cases/comments.css
@@ -4,6 +4,13 @@ body {
 form {
   background: #fff;
 }
+/*
+
+body
+  a
+    color blue
+
+*/
 html>/**/body select,
 x:-moz-any-link,
 x:default select {
