--- a/test/cases/control.blueprint.ie.css
+++ b/test/cases/control.blueprint.ie.css
@@ -1,3 +1,16 @@
+/* -----------------------------------------------------------------------
+
+
+ Blueprint CSS Framework 1.0
+ http://blueprintcss.org
+
+   * Copyright (c) 2007-Present. See LICENSE for more info.
+   * See README for instructions on how to use Blueprint.
+   * For credits and origins, see AUTHORS.
+   * This is a compressed file. See the sources in the 'src' directory.
+
+----------------------------------------------------------------------- */
+/* ie.css */
 body {
   text-align: center;
 }
