--- a/test/cases/control.blueprint.screen.css
+++ b/test/cases/control.blueprint.screen.css
@@ -1,3 +1,16 @@
+/* -----------------------------------------------------------------------
+
+
+ Blueprint CSS Framework 1.0
+ http://blueprintcss.org
+
+   * Copyright (c) 2007-Present. See LICENSE for more info.
+   * See README for instructions on how to use Blueprint.
+   * For credits and origins, see AUTHORS.
+   * This is a compressed file. See the sources in the 'src' directory.
+
+----------------------------------------------------------------------- */
+/* reset.css */
 html {
   margin: 0;
   padding: 0;
@@ -110,6 +123,7 @@ a img {
 :focus {
   outline: 0;
 }
+/* typography.css */
 html {
   font-size: 100.01%;
 }
@@ -322,6 +336,7 @@ caption {
   margin-bottom: 0;
   padding-bottom: 0;
 }
+/* forms.css */
 label {
   font-weight: bold;
 }
@@ -435,6 +450,7 @@ form.inline p {
 .info a {
   color: #205791;
 }
+/* grid.css */
 .container {
   width: 950px;
   margin: 0 auto;
