--- a/test/cases/control.boilerplate.css
+++ b/test/cases/control.boilerplate.css
@@ -1,3 +1,19 @@
+/**
+ * HTML5 ✰ Boilerplate
+ *
+ * style.css contains a reset, font normalization and some base styles.
+ *
+ * Credit is left where credit is due.
+ * Much inspiration was taken from these projects:
+ * - yui.yahooapis.com/2.8.1/build/base/base.css
+ * - camendesign.com/design/
+ * - praegnanz.de/weblog/htmlcssjs-kickstart
+ */
+/**
+ * html5doctor.com Reset Stylesheet (Eric Meyer's Reset Reloaded + HTML5 baseline)
+ * v1.6.1 2010-09-17 | Authors: Eric Meyer & Richard Clark
+ * html5doctor.com/html-5-reset-stylesheet/
+ */
 html,
 body,
 div,
@@ -133,28 +149,40 @@ input,
 select {
   vertical-align: middle;
 }
+/**
+ * Font normalization inspired by YUI Library's fonts.css: developer.yahoo.com/yui/
+ */
 body {
   font: 13px/1.231 sans-serif;
   *font-size: small;
 }
+/* Hack retained to preserve specificity */
 select,
 input,
 textarea,
 button {
   font: 99% sans-serif;
 }
+/* Normalize monospace sizing:
+   en.wikipedia.org/wiki/MediaWiki_talk:Common.css/Archive_11#Teletype_style_fix_for_Chrome */
 pre,
 code,
 kbd,
 samp {
   font-family: monospace, sans-serif;
 }
+/**
+ * Minimal base styles.
+ */
+/* Always force a scrollbar in non-IE */
 html {
   overflow-y: scroll;
 }
+/* j.mp/webkit-tap-highlight-color */
 a:link {
   -webkit-tap-highlight-color: #ff5e99;
 }
+/* Accessible focus treatment: people.opera.com/patrickl/experiments/keyboard/test */
 a:hover,
 a:active {
   outline: none;
@@ -174,6 +202,7 @@ ol {
 ol {
   list-style-type: decimal;
 }
+/* Remove margins for navigation lists */
 nav ul,
 nav li {
   margin: 0;
@@ -190,6 +219,7 @@ th {
 td {
   vertical-align: top;
 }
+/* Set sub, sup without affecting line-height: gist.github.com/413930 */
 sub,
 sup {
   font-size: 75%;
@@ -203,6 +233,7 @@ sub {
   bottom: -0.25em;
 }
 pre {
+/* www.pathf.com/blogs/2008/05/formatting-quoted-code-in-blog-posts-css21-white-space-pre-wrap/ */
   white-space: pre;
   white-space: pre-wrap;
   word-wrap: break-word;
@@ -212,6 +243,7 @@ pre {
 .ie7 legend {
   margin-left: -7px;
 }
+/* Align checkboxes, radios, text inputs with their label by: Thierry Koblentz tjkdesign.com/ez-css/css/base.css  */
 input[type="radio"] {
   vertical-align: text-bottom;
 }
@@ -224,6 +256,7 @@ input[type="checkbox"] {
 .ie6 input {
   vertical-align: text-bottom;
 }
+/* Hand cursor on clickable input elements */
 label,
 input[type="button"],
 input[type="submit"],
@@ -231,6 +264,9 @@ input[type="image"],
 button {
   cursor: pointer;
 }
+/* 1) Make inputs and buttons play nice in IE: www.viget.com/inspire/styling-the-button-element-in-internet-explorer/
+   2) WebKit browsers add a 2px margin outside the chrome of form elements. 
+      Firefox adds a 1px margin above and below textareas */
 button,
 input,
 select,
@@ -242,11 +278,14 @@ textarea {
 textarea {
   overflow: auto;
 }
+/* www.sitepoint.com/blogs/2010/08/20/ie-remove-textarea-scrollbars/ */
+/* Remove extra padding and inner border in Firefox */
 input::-moz-focus-inner,
 button::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
+/* Colors for form validity */
 input:valid,
 textarea:valid,
 input:invalid,
@@ -260,6 +299,9 @@ textarea:invalid {
 .no-boxshadow textarea:invalid {
   background-color: #f0dddd;
 }
+/* These selection declarations have to be separate
+   No text-shadow: twitter.com/miketaylr/status/12228805301
+   Also: hot pink! */
 ::-moz-selection {
   background: #ff5e99;
   color: #fff;
@@ -270,15 +312,24 @@ textarea:invalid {
   color: #fff;
   text-shadow: none;
 }
+/* Bicubic resizing for non-native sized IMG:
+   code.flickr.com/blog/2008/11/12/on-ui-quality-the-little-things-client-side-image-resizing/ */
 .ie7 img {
   -ms-interpolation-mode: bicubic;
 }
+/**
+ * You might tweak these..
+ */
 body,
 select,
 input,
 textarea {
+/* #444 looks better than black: twitter.com/H_FJ/statuses/11800719859 */
   color: #444;
+/* Set your base font here, to apply evenly */
+/* font-family: Georgia, serif;  */
 }
+/* Headers (h1, h2, etc) have no default font-size or margin; define those yourself */
 h1,
 h2,
 h3,
@@ -287,6 +338,15 @@ h5,
 h6 {
   font-weight: bold;
 }
+/**
+ * Primary styles
+ *
+ * Author: 
+ */
+/**
+ * Non-semantic helper classes: please define your styles before this section.
+ */
+/* For image replacement */
 .ir {
   display: block;
   text-indent: -999em;
@@ -295,10 +355,14 @@ h6 {
   text-align: left;
   direction: ltr;
 }
+/* Hide for both screenreaders and browsers:
+   css-discuss.incutio.com/wiki/Screenreader_Visibility */
 .hidden {
   display: none;
   visibility: hidden;
 }
+/* Hide only visually, but have it available for screenreaders: by Jon Neal.
+  www.webaim.org/techniques/css/invisiblecontent/  &  j.mp/visuallyhidden */
 .visuallyhidden {
   border: 0;
   clip: rect(0 0 0 0);
@@ -309,6 +373,7 @@ h6 {
   position: absolute;
   width: 1px;
 }
+/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: drupal.org/node/897638 */
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
   clip: auto;
@@ -318,9 +383,12 @@ h6 {
   position: static;
   width: auto;
 }
+/* Hide visually and from screenreaders, but maintain layout */
 .invisible {
   visibility: hidden;
 }
+/* The Magnificent Clearfix: Updated to prevent margin-collapsing on child elements in most situations.
+   nicolasgallagher.com/micro-clearfix-hack/ */
 .clearfix:before,
 .clearfix:after {
   content: "";
@@ -332,12 +400,24 @@ h6 {
 .clearfix {
   zoom: 1;
 }
+/**
+ * Media queries for responsive design.
+ *
+ * These follow after primary styles so they will successfully override.
+ */
 @media all and (orientation:portrait) {
 }
 @media all and (orientation:landscape) {
 }
+/* Grade-A Mobile Browsers (Opera Mobile, Mobile Safari, Android Chrome)
+   consider this: www.cloudfour.com/css-media-query-for-mobile-is-fools-gold/ */
 @media screen and (max-device-width: 480px) {
 }
+/**
+ * Print styles.
+ *
+ * Inlined to avoid required HTTP connection: www.phpied.com/delay-loading-your-print-css/
+ */
 @media print {
   * {
     background: transparent !important;
