Added pseudo-element vendor expansion support

--- a/test/cases/selectors.pseudo.styl
+++ b/test/cases/selectors.pseudo.styl
@@ -12,7 +12,7 @@ table
   td:nth-child(3)
   td:nth-child(4)
   td:nth-child(5)
-  td::first-letter
+  td:first-letter
     background black
     li:first-child
     li:last-child
