Removed auto-prefixing of pseudo element selectors. Closes #385

--- a/test/cases/selectors.pseudo.elements.css
+++ b/test/cases/selectors.pseudo.elements.css
@@ -1,9 +1,5 @@
 input::selection,
-input::focus-inner,
-input::-moz-selection,
-input::-webkit-selection,
-input::-moz-focus-inner,
-input::-webkit-focus-inner {
+input::focus-inner {
   border: 0;
   padding: 0;
 }
@@ -11,31 +7,20 @@ input::-moz-selection {
   border: 0;
 }
 p,
-::selection,
-::-moz-selection,
-::-webkit-selection {
+::selection {
   background: #000;
 }
-::selection,
-::-moz-selection,
-::-webkit-selection {
+::selection {
   background: #000;
 }
 p::selection,
-a::selection,
-p::-moz-selection,
-p::-webkit-selection,
-a::-moz-selection,
-a::-webkit-selection {
+a::selection {
   background: #000;
 }
-p::selection,
-p::-moz-selection,
-p::-webkit-selection {
+p::selection {
   color: #fff;
   background: #000;
 }
-body ::selection,
-body ::-webkit-selection {
+body ::selection {
   color: #fff;
 }
