--- a/test/cases/bifs.join.css
+++ b/test/cases/bifs.join.css
@@ -7,5 +7,12 @@ body {
 }
 body {
   foo: "1, 2, 3";
-  foo: "one, two, three";
+  foo: "one 1, two 2, three 3";
+}
+body {
+  foo: "1 2, #fff #000, 5px 6px";
+  foo: "1 2, 3 4, 5 6";
+  foo: "1 2, 3 4, 5 6";
+  foo: "1, 2, 3, 4, 5, 6";
+  foo: "1, 2, 3, 4, 5, 6";
 }
