Added list equality to the == operator

--- a/test/cases/operators.equality.css
+++ b/test/cases/operators.equality.css
@@ -26,3 +26,18 @@ body {
   foo: true;
   foo: true;
 }
+body {
+  foo: true;
+  foo: true;
+  foo: true;
+}
+body {
+  foo: false;
+  foo: false;
+  foo: false;
+  foo: false;
+  foo: false;
+  foo: false;
+  foo: false;
+  foo: false;
+}
