Added list equality to the != operator

--- a/test/cases/operators.equality.css
+++ b/test/cases/operators.equality.css
@@ -41,3 +41,15 @@ body {
   foo: false;
   foo: false;
 }
+body {
+  foo: true;
+  foo: true;
+  foo: true;
+  foo: true;
+  foo: true;
+}
+body {
+  foo: false;
+  foo: false;
+  foo: false;
+}
