--- a/test/cases/operators.equality.styl
+++ b/test/cases/operators.equality.styl
@@ -41,3 +41,15 @@ body
   foo: () == true
   foo: true == ()
   foo: !!()
+
+body
+  foo: (1 2 3) != (1 1 3)
+  foo: (foo bar baz) != (foo 1 2)
+  foo: () != (1)
+  foo: (1) != (0)
+  foo: () != (null)
+
+body
+  foo: (1 2 3) != (1 2 3)
+  foo: (foo bar) != (foo bar)
+  foo: () != ()
