--- a/assets/try.jade
+++ b/assets/try.jade
@@ -3,6 +3,7 @@ html
   head
     title Stylus
     link(rel='stylesheet', href='main.css')
+    link(rel='stylesheet', href='try.css')
     meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
     link(rel='stylesheet', href='codemirror.css')
     script(src='jquery.js')
