--- a/assets/head.jade
+++ b/assets/head.jade
@@ -1,12 +1,4 @@
-h1 
-  a(href='http://learnboost.github.com/stylus') Stylus
-p.tagline 
-  em.expressive Expressive, 
-  em.dynamic dynamic, 
-  em.robust robust 
-  em.css CSS
-#ribbon
-  a(href='http://github.com/learnboost/stylus') Fork me on GitHub
+include top
 ul#menu
   li: a(href='docs/selectors.html') Selectors
   li: a(href='docs/variables.html') Variables
