--- a/assets/try.jade
+++ b/assets/try.jade
@@ -12,7 +12,7 @@ html
     script(src='try.js')
   body
     #container
-      include head
+      include top
       #content
         .example
           textarea.stylus
