--- a/assets/try.styl
+++ b/assets/try.styl
@@ -111,7 +111,7 @@ ul
   #content
     margin 0 auto
     padding-top 40px
-    width 320px
+    width 800px
     text-align left
 
 #menu
@@ -140,6 +140,9 @@ ul
 
 .example
   margin-top 25px
+
+.CodeMirror
+  float: left
 
 p
   code
