--- a/assets/try.styl
+++ b/assets/try.styl
@@ -52,7 +52,7 @@ html
   background -webkit-gradient(linear, left top, left bottom, from(#fff), to(dark)) fixed
 
 body
-  padding 120px 150px
+  padding 120px 50px
   font small/1.4 'helvetica neue', helvetica, arial, sans-serif
   color light-gray
 
@@ -111,7 +111,7 @@ ul
   #content
     margin 0 auto
     padding-top 40px
-    width 800px
+    width 90%
     text-align left
 
 #menu
@@ -143,6 +143,9 @@ ul
 
 .CodeMirror
   float: left
+  margin: 0 30px
+  .CodeMirror-gutter
+    display: none
 
 p
   code
