--- a/assets/try.styl
+++ b/assets/try.styl
@@ -140,10 +140,11 @@ ul
 
 .example
   margin-top 25px
+  clear: both
 
 .CodeMirror
   float: left
-  margin: 0 30px
+  margin: 0 10px
   .CodeMirror-gutter
     display: none
 
