--- a/codemirror.css
+++ b/codemirror.css
@@ -6,10 +6,11 @@
 
 .CodeMirror-scroll {
   overflow: auto;
-  height: 300px;
   /* This is needed to prevent an IE[67] bug where the scrolled content
      is visible outside of the scrolling box. */
   position: relative;
+  margin: 5px 0;
+  width: 400px;
 }
 
 .CodeMirror-gutter {
