--- a/assets/try.jade
+++ b/assets/try.jade
@@ -15,6 +15,7 @@ html
       include top
       #content
         .example
+          p Stylus supports regular CSS syntax:
           textarea.stylus
             body {
               font: 14px/1.5 Helvetica, arial, sans-serif;
@@ -25,6 +26,7 @@ html
           textarea.css
 
         .example
+          p Selector nesting enables you to keep your styles DRY:
           textarea.stylus
             body {
               font: 14px/1.5 Helvetica, arial, sans-serif;
