--- a/assets/try.jade
+++ b/assets/try.jade
@@ -15,17 +15,7 @@ html
       include top
       #content
         .example
-          p Stylus supports regular CSS syntax:
-          textarea.stylus
-            body {
-              font: 14px/1.5 Helvetica, arial, sans-serif;
-            }
-            #logo {
-              border-radius: 5px;
-            }
-          textarea.css
-
-        .example
+          h2 Nesting
           p Selector nesting enables you to keep your styles DRY:
           textarea.stylus
             body {
@@ -37,6 +27,7 @@ html
           textarea.css
 
         .example
+          h2 Flexible syntax
           p Semi-colons, colons, and braces are optional:
           textarea.stylus
             body
@@ -46,11 +37,31 @@ html
           textarea.css
 
         .example
+          h2 Mixins
           p.
-            Transparent mixins are a feature unique to Stylus,
-            and are a incredibly powerful enhance your stylesheets. Here all the arguments
-            passed are simply assigned to three properties. Stylus knows not to recursively
-            invoke the border-radius() mixin.
+            Stylus mixins allow you to define reusable
+            functionality by defining in-language functions
+            which can be called from within blocks:
+          textarea.stylus
+            border-radius(val)
+              -webkit-border-radius: val
+              -moz-border-radius: val
+              border-radius: val
+
+            body {
+              font: 14px/1.5 Helvetica, arial, sans-serif;
+              #logo {
+                border-radius(5px);
+              }
+            }
+          textarea.css
+
+        .example
+          h2 Transparent mixins
+          p.
+            Transparent mixins are unique to Stylus,
+            and are a incredibly powerful way enhance your stylesheets. Here all the arguments
+            passed are simply assigned to three properties.
           textarea.stylus
             border-radius()
               -webkit-border-radius: arguments
@@ -60,7 +71,7 @@ html
             body {
               font: 14px/1.5 Helvetica, arial, sans-serif;
               #logo {
-                border-radius: 5px;
+                border-radius: 5px 10px;
               }
             }
           textarea.css
